// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VueBlockDocument directives 1`] = `
    <B
      a=""
      onA={VueDX.internal.checkOnDirective(B, "a" as const, onNum, {})}
                                                            ^^^^^ > 5 at 761
      onB={VueDX.internal.checkOnDirective(B, "b" as const, onNum, {"once": true})}
      onC={VueDX.internal.checkOnDirective(B, "c" as const, ($event) => {
`;

exports[`VueBlockDocument directives 2`] = `
    <B
      a=""
      onA={VueDX.internal.checkOnDirective(B, "a" as const, onNum, {})}
                                                               ^^ > 2 at 764
      onB={VueDX.internal.checkOnDirective(B, "b" as const, onNum, {"once": true})}
      onC={VueDX.internal.checkOnDirective(B, "c" as const, ($event) => {
`;

exports[`VueBlockDocument directives 3`] = `
    <B
      a=""
      onA={VueDX.internal.checkOnDirective(B, "a" as const, onNum, {})}
                                                            ^^^^^ > 5 at 761
      onB={VueDX.internal.checkOnDirective(B, "b" as const, onNum, {"once": true})}
      onC={VueDX.internal.checkOnDirective(B, "c" as const, ($event) => {
`;

exports[`VueBlockDocument directives 4`] = `
    <B
      a=""
      onA={VueDX.internal.checkOnDirective(B, "a" as const, onNum, {})}
                                                               ^^ > 2 at 764
      onB={VueDX.internal.checkOnDirective(B, "b" as const, onNum, {"once": true})}
      onC={VueDX.internal.checkOnDirective(B, "c" as const, ($event) => {
`;

exports[`VueBlockDocument directives 5`] = `
      a=""
      onA={VueDX.internal.checkOnDirective(B, "a" as const, onNum, {})}
      onB={VueDX.internal.checkOnDirective(B, "b" as const, onNum, {"once": true})}
                                                                   ^ > 1 at 840
      onC={VueDX.internal.checkOnDirective(B, "c" as const, ($event) => {
        call.a['func']($event)
`;

exports[`VueBlockDocument directives 6`] = `
      onB={VueDX.internal.checkOnDirective(B, "b" as const, onNum, {"once": true})}
      onC={VueDX.internal.checkOnDirective(B, "c" as const, ($event) => {
        call.a['func']($event)
              ^^^^^^^^ > 8 at 945
      }, {})}
     />
`;

exports[`VueBlockDocument directives 7`] = `
      onB={VueDX.internal.checkOnDirective(B, "b" as const, onNum, {"once": true})}
      onC={VueDX.internal.checkOnDirective(B, "c" as const, ($event) => {
        call.a['func']($event)
                       ^^^^^^ > 6 at 954
      }, {})}
     />
`;
